<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Address Book</string>
    <string name="dodaj">Dodaj Kontakt</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_contact">AddContactActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Ime Prezime</string>
    <string name="phone">Broj</string>
    <string name="email">Email</string>
    <string name="note">Dodatno</string>
    <string name="facebook">Facebook</string>
    <string name="call">Nazovi</string>
    <string name="save">Spremi</string>
    <string name="cancel">Odustani</string>
    <string name="title_activity_profile">ProfileActivity</string>

</resources>
