<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hr.infinum.fer.ik47861.AddContactActivity" >

	<ScrollView android:id="@+id/scroll_add"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    >
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        >
	        
	        <EditText android:id="@+id/name"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/name"/>
	        
	        <EditText android:id="@+id/phone"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/phone"
	            android:inputType="phone"/>
	        
	        <EditText android:id="@+id/email"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/email"
	            android:inputType="textEmailAddress"/>
	        
	        <EditText android:id="@+id/note"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/note"
	            />
	        
	        <EditText android:id="@+id/facebook_profile"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/facebook"
	            android:inputType="textUri"/>
	    </LinearLayout>
	    
	</ScrollView>
	
	 <LinearLayout 
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:orientation="horizontal"
	     style="@android:attr/buttonBarStyle"
	     android:layout_alignParentBottom="true">
	     
	     <Button android:id="@+id/button_save"
	         android:layout_width="0dp"
	         android:layout_height="wrap_content"
	         android:text="@string/save"
	         style="@android:attr/buttonBarButtonStyle"
	         android:layout_weight="1"/>
	     
	    <Button android:id="@+id/button_cancel"
	         android:layout_width="0dp"
	         android:layout_height="wrap_content"
	         android:text="@string/cancel"
	         style="@android:attr/buttonBarButtonStyle"
	         android:layout_weight="1"/>
	 </LinearLayout>
</RelativeLayout>
